--- a/src/app/views/vuelos/vuelos.component.css
+++ b/src/app/views/vuelos/vuelos.component.css
@@ -1,5 +1,5 @@
 .btn-gradient {
-  background: linear-gradient(to right, #3269ff, #3269ff);
+  background: linear-gradient(to right, #62b2f3, #62b2f3);
   border: none;
   color: white;
   padding: 10px 20px;
@@ -10,7 +10,7 @@
 }
 
 .btn-gradient:hover {
-  background: linear-gradient(to left, #3269ff, #3269ff);
+  background: linear-gradient(to right, #1D4AA3, #1D4AA3);
   font-weight: bold;
 }
 
@@ -45,7 +45,6 @@ html, body {
 .vuelos-list {
   width: 100%;
 }
-
 .card {
   width: 100%;
   margin-bottom: 20px;
@@ -97,4 +96,26 @@ html, body {
   background-color: #ddd;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+.origen{
+  text-align: left;
+  flex: 1;
+}
+.llegada{
+  text-align: right;
+  flex: 1;
+}
+.aiport{
+  display: flex; 
+  justify-content: space-between; 
+  
+}
+
+.pruebas{
+  width: 100%;
+  position: relative;
+  background-color: #ffffff;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 8px 16px rgba(19, 129, 133, 0.459); 
 }
