--- a/src/app/views/g-vuelos/g-vuelos.component.html
+++ b/src/app/views/g-vuelos/g-vuelos.component.html
@@ -1,4 +1,4 @@
-<app-g-header/>
+<app-g-header></app-g-header>
 <div class="container">
     <h1>Gestión de vuelos</h1>
     <div class="row">
@@ -35,18 +35,17 @@
           <ng-container *ngFor="let vuelos of vuelo">
             <tr>
               <td>{{vuelos.numeroVuelo}}</td>
-              <td>{{vuelos.aeropuertoOrigenId}}</td>
-              <td>{{vuelos.aeropuertoLlegadaId}}</td>
-              <td>{{vuelos.fechaSalida}}</td>
+              <td>{{getAeropuertoNombre(vuelos.aeropuertoOrigenId)}}</td>
+              <td>{{getAeropuertoNombre(vuelos.aeropuertoLlegadaId)}}</td>
+              <td>{{vuelos.fechaSalida | date: 'dd/MM/yyyy'}}</td>
               <td>{{vuelos.horaSalida}}</td>
               <td>{{vuelos.horaLlegada}}</td>
               <td>{{vuelos.duracion}} min</td>
               <td>{{vuelos.asientosDisponibles}}</td>
               <td>{{vuelos.estado}}</td>
               <td>S/. {{vuelos.precio}}</td>
-
               <td>
-                <a [routerLink]="['/g-boletos', vuelos.id]" class="btn btn-sm btn-info" target="_blank">
+                <a [routerLink]="['/g-boletos']" class="btn btn-sm btn-info" target="_blank">
                   <i class="fas fa-eye"></i>
                 </a>
                 <button class="btn btn-sm btn-warning">
@@ -56,7 +55,6 @@
                   <i class="fas fa-trash"></i>
                 </button>
               </td>
-
             </tr>
           </ng-container>
         </ng-container>
@@ -67,8 +65,7 @@
         </ng-template>
       </tbody>
     </table>
-  </div>
-  
+</div>
 
 <!-- Modal para añadir vuelo -->
 <div class="modal fade" id="addVueloModal" tabindex="-1" aria-labelledby="addVueloModalLabel" aria-hidden="true" #addVueloModal>
@@ -86,12 +83,16 @@
             <input type="text" class="form-control" id="numeroVuelo" [(ngModel)]="nuevoVuelo.numeroVuelo" name="numeroVuelo" required>
           </div>
           <div class="mb-3">
-            <label for="aeropuertoOrigenId" class="form-label">Aeropuerto de Origen</label>
-            <input type="number" class="form-control" id="aeropuertoOrigenId" [(ngModel)]="nuevoVuelo.aeropuertoOrigenId" name="aeropuertoOrigenId" required>
+            <label for="aeropuertoOrigenId" class="form-label">Aeropuerto Origen</label>
+            <select class="form-control" id="aeropuertoOrigenId" [(ngModel)]="nuevoVuelo.aeropuertoOrigenId" name="aeropuertoOrigenId" required>
+              <option *ngFor="let aeropuerto of aeropuertos" [value]="aeropuerto.id">{{aeropuerto.nombre}}</option>
+            </select>
           </div>
           <div class="mb-3">
-            <label for="aeropuertoLlegadaId" class="form-label">Aeropuerto de Llegada</label>
-            <input type="number" class="form-control" id="aeropuertoLlegadaId" [(ngModel)]="nuevoVuelo.aeropuertoLlegadaId" name="aeropuertoLlegadaId" required>
+            <label for="aeropuertoLlegadaId" class="form-label">Aeropuerto Llegada</label>
+            <select class="form-control" id="aeropuertoLlegadaId" [(ngModel)]="nuevoVuelo.aeropuertoLlegadaId" name="aeropuertoLlegadaId" required>
+              <option *ngFor="let aeropuerto of aeropuertos" [value]="aeropuerto.id">{{aeropuerto.nombre}}</option>
+            </select>
           </div>
           <div class="mb-3">
             <label for="fechaSalida" class="form-label">Fecha de Salida</label>
@@ -109,11 +110,8 @@
             <label for="precio" class="form-label">Precio</label>
             <input type="number" class="form-control" id="precio" [(ngModel)]="nuevoVuelo.precio" name="precio" required>
           </div>
-          <button type="button" class="btn btn-primary btn-gradient" (click)="createNuevoVuelo()">Guardar Vuelo</button>
+          <button type="submit" class="btn btn-primary btn-gradient" (click)="createNuevoVuelo()">Guardar</button>
         </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary btn-gradient-cancelar" data-bs-dismiss="modal" (click)="cerrarModal()">Cerrar</button>
       </div>
     </div>
   </div>
