--- a/src/app/views/pagos/pagos.component.html
+++ b/src/app/views/pagos/pagos.component.html
@@ -1,7 +1,20 @@
-<div class="payment-form">
-    <label for="card-element">Ingresa los detalles de tu tarjeta:</label>
-    <div #cardElement id="card-element" class="card-element"></div>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card-title mb-4">Detalles de Pago</h2>
+
+          <form (submit)="onSubmit()">
+            <div class="form-group">
+              <label for="card-element">Ingresa los detalles de tu tarjeta:</label>
+              <div #cardElement id="card-element" class="card-element"></div>
+            </div>
+
+            <button type="submit" class="btn btn-primary btn-block mt-4">Pagar</button>
+          </form>
+        </div>
+      </div>
+    </div>
   </div>
-  
-  <button (click)="onSubmit()" class="pay-button">Pagar</button>
-  
+</div>
